--- a/cybertalks/package.json
+++ b/cybertalks/package.json
@@ -64,6 +64,7 @@
     "@vinejs/vine": "^2.1.0",
     "better-sqlite3": "^11.1.1",
     "edge.js": "^6.0.2",
+    "kernel": "^0.1.4",
     "luxon": "^3.4.4",
     "reflect-metadata": "^0.2.2"
   },
